--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
    <img id="groundTexture" src="https://abigailoconnor.github.io/a-frame-forest/floor_leaves.jpg" crossorigin="anonymous">
    <img id="wik01" src="https://abigailoconnor.github.io/a-frame-forest/assets/wik_forest.jpg" />
   </a-assets>
+	  
+	  <a-entity id="ground" geometry="primitive: cylinder" scale="60 1 60" material="color: #aaaaaa; src: #groundTexture"></a-entity>
   
   <a-sky id="background" src="#skyLeaves" theta-length="90" radius="30" position="0 -13.82849 0" material="" geometry="" scale="-2 2 2"></a-sky>
   
