--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <img id="wik01" src="https://abigailoconnor.github.io/a-frame-forest/assets/wik_forest.jpg" />
   </a-assets>
 	  <a-curvedimage src="#wik01" radius="5.7" theta-length="180" height="9" position="0 8.3 14.9" rotation="0 -90 0" scale="0.48 0.88 0.62" material="" geometry="height: 8.33; radius: 9.09; thetaLength: 160" id="forestInfo"></a-curvedimage>
-	  <a-entity id="ground" geometry="primitive: cylinder" scale="60 1 60" material="color: #aaaaaa; ></a-entity>
+	  <a-entity id="ground" geometry="primitive: cylinder"></a-entity>
   
   <a-sky id="background" src="#skyLeaves" theta-length="90" radius="30" position="0 -13.82849 0" material="" geometry="" scale="-2 2 2"></a-sky>
   
